@@ -3,7 +3,7 @@
 # It is sourced by the build scripts
 
 archspec="s390;not-powerpc;not-m68k;not-x86;not-alpha"
-kernelversion="2.6.18"
+kernelversion="2.6.24"
 arch_listname="s390"
 minimum_memory=20
 # These two options should be set if condition 'smp' is set below
