@@ -6,9 +6,27 @@
 
 <para>
 
-You must have at least &minimum-memory; of memory and &minimum-fs-size; of hard disk
-space. Note that these are really bare-minimum numbers. For more realistic
-figures, see <xref linkend="minimum-hardware-reqts"/>.
+You must have at least &minimum-memory; of memory and &minimum-fs-size;
+of hard disk space to perform a normal installation. Note that these are
+fairly minimal numbers. For more realistic figures, see
+<xref linkend="minimum-hardware-reqts"/>.
+
+</para><para>
+
+Installation on systems with less memory<footnote condition="gtk">
+
+<para>
+
+Installation images that support the graphical installer require more
+memory than images that support only the textual installer and should
+not be used on systems with less than &minimum-memory; of memory. If
+there is a choice between booting the regular and the graphical installer,
+the former should be selected.
+
+</para>
+
+</footnote> or disk space available may be possible but is only advised for
+experienced users.
 
 </para><para arch="m68k">
 
